--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ a {
   font-style: italic;
 }
 
-.description {
+.secondary-color {
   color: #8e8e8e;
 }
 
